--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -18,7 +19,7 @@
                     <a href="#HOME"> HOME </a>
                 </li>
                 <li>
-                    <a href="#SERVICES" id="addForm" onclick="myfunction11()">+ADD</a>
+                    <a href="#SERVICES" id="addForm">+ADD</a>
                 </li>
 
                 <li class="image_class">
@@ -56,10 +57,11 @@
         <input type="text" id="website" class="name" onchange="validateName()"><span id="name3">*</span><br>
         <label for="email">Address</label><br>
         <textarea name="" id="address"></textarea><span id="name4">*</span><br>
-        <input type="button" id="button" class="Message" value="ADD" onclick="submitForm()"><br>
+        <button  type="submit" id="button" class="Message" value="ADD">ADD</button><br>
         <input type="reset" class="Message" value="Clear Form">
     </form>
     <script src="./address1.js"></script>
+    <script src="./address2.js"></script>
 </body>
 
 </html>
@@ -93,3 +95,4 @@
                      Madhapur, Hyderabad 500033
             
             </pre>-->
+            
