--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <input type="text" id="fname" class="name" onchange="validateName()"><span id="name1">*</span><br>
         <label for="email">Email</label><br>
         <input type="text" id="email" onchange="validateName()"><span id="myEmail">*</span><br>
-        <label for="fname">Mobile</label>
-        <label for="email" id="line" class="name">Landline</label><br>
+        <label for="mob">Mobile</label>
+        <label for="land" id="line" class="name">Landline</label><br>
         <input type="text" id="mob" class="name" onchange="mobileNumber()"><span id="name2">*</span>
         <input type="text" id="land" onchange="landlineNumber()"><span id="mobileid">*</span><br>
-        <label for="fname">Website</label><br>
+        <label for="website">Website</label><br>
         <input type="text" id="website" class="name" onchange="validateName()"><span id="name3">*</span><br>
-        <label for="email">Address</label><br>
+        <label for="address">Address</label><br>
         <textarea name="" id="address"></textarea><span id="name4">*</span><br>
         <button  type="submit" id="button" class="Message" value="ADD" >ADD</button><br>
         <input type="reset" class="Message" value="Clear Form">
